# basit-pbr

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/custom/: camera.hpp  model.hpp  shader.hpp
src/: texture.cpp
src/pbr/: simplepbr.cpp
src/phong/: phong.cpp  phong2.cpp  phongNoSpec.cpp  phongRef.cpp
